[tool.poetry]
name = "chantek"
version = "0.10.0-alpha"
description = "An unaspiring read-only HTTP API server written in Python"
authors = ["Hay Kranen <huskyr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"
pyquery = "^1.4"
lxml = "^4.3"
xmltodict = "^0.12.0"
redis = "^3.2"
Flask = "^1.0"
jsonpickle = "^1.1"
jq = "^0.1.6"
dataknead = "^0.2.0"
rdflib = "^4.2"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
